# LinkedIn-Cover-Image

./: .gitignore  Makefile  README.md  cm_from_img.py  main.py  pattern_generators.py  pyproject.toml  requirements.txt  shape.py
src/cover_image/: main.py  pattern_generators.py  shape.py
